feat(persistent-stream): add aggregate-based tag filtering support
Update PersistentStreamMessageSource.subscribe(EventCriteria, BiFunction) to
support aggregate-based tag filtering for legacy aggregate events.

For events with aggregate information in Context (via LegacyResources), a Tag
is automatically constructed from:
- Key: aggregate type (LegacyResources.AGGREGATE_TYPE_KEY)
- Value: aggregate identifier (LegacyResources.AGGREGATE_IDENTIFIER_KEY)

This enables filtering like:
  EventCriteria.havingTags("OrderAggregate", "order-123")

The filtering works by accessing the Entry's Context where aggregate resources
are stored by PersistentStreamEventConverter.

Note: Generic tag-based filtering (non-aggregate tags) is still not supported
as persistent streams don't expose arbitrary tags client-side.

Refs: #3520

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>